# simple-xml

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: comment.xml  cube.dae  graph.xml  message.xml  note.xml  person.xml
src/: error.rs  lib.rs  main.rs  split_unquoted.rs
tests/: gen.rs  parse.rs
