[package]
name = "simple-xml"
version = "0.1.10"
authors = ["Tim Roberts <ten3roberts@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/ten3roberts/simple-xml"
description = "A dead simple xml parser"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"

[dev-dependencies]
rand = "0.8.5"
